[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui_controls/plot/Plot.gd" type="Script" id=1]

[node name="Plot" type="GridContainer"]
margin_right = 280.0
margin_bottom = 64.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 64.0
rect_min_size = Vector2( 256, 64 )
color = Color( 0.313726, 0, 1, 0.501961 )

[node name="Labels" type="CenterContainer" parent="."]
margin_left = 256.0
margin_right = 288.0
margin_bottom = 64.0

[node name="CurrentValueLabel" type="Label" parent="Labels"]
margin_top = 25.0
margin_right = 32.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 0 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 288.0
margin_right = 320.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 0 )

[node name="Shop" type="Control" parent="."]
margin_left = 320.0
margin_right = 320.0
margin_bottom = 64.0

[node name="Background" type="ColorRect" parent="Shop"]
margin_left = -8.0
margin_right = 256.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.713726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Shop"]
margin_right = 168.0
margin_bottom = 64.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Shop/Grid"]
margin_top = 25.0
margin_right = 72.0
margin_bottom = 39.0
rect_min_size = Vector2( 72, 0 )
text = "STRENGTH"

[node name="SellButtonContainer" type="CenterContainer" parent="Shop/Grid"]
margin_left = 76.0
margin_right = 140.0
margin_bottom = 64.0

[node name="SellButton" type="Button" parent="Shop/Grid/SellButtonContainer"]
margin_top = 16.0
margin_right = 64.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 32 )
text = "Sell"

[node name="StatVals" type="CenterContainer" parent="Shop/Grid"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )

[node name="CurrentStatLabel" type="Label" parent="Shop/Grid/StatVals"]
margin_top = 25.0
margin_right = 32.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 0 )
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButtonContainer" type="CenterContainer" parent="Shop/Grid"]
margin_left = 180.0
margin_right = 244.0
margin_bottom = 64.0

[node name="BuyButton" type="Button" parent="Shop/Grid/BuyButtonContainer"]
margin_top = 16.0
margin_right = 64.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 32 )
text = "Buy (10)"

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 8, 56, 48, 16, 88, 48, 128, 24, 192, 48, 232, 8 )
width = 6.0
default_color = Color( 1, 0.4, 0.4, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 3

[connection signal="pressed" from="Shop/Grid/SellButtonContainer/SellButton" to="." method="_on_SellButton_pressed"]
[connection signal="pressed" from="Shop/Grid/BuyButtonContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
